# soft-target-backend

./: .env.example  .gitignore  AGENTS.md  API.md  DRAFTS_UPDATE.md  FRONTEND_AGENTS.md  Makefile  UPDATE.md  alembic.ini  docker-compose.test.yml  pyproject.toml  update.md
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20260101_0001_initial_schema.py  20260416_0002_add_user_name.py  20260417_0003_user_draft.py  20260505_0004_organisations.py  20260601_0005_drafts_table.py
app/: __init__.py  cli.py  main.py
app/api/: deps.py  errors.py  middleware.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  drafts.py  org.py  reports.py
app/core/: config.py  logging.py  rate_limit.py  security.py
app/db/: base.py  session.py  types.py
app/models/: __init__.py  audit_log.py  draft.py  organisation.py  refresh_token.py  report.py  report_version.py  user.py
app/repositories/: audit_repo.py  draft_repo.py  errors.py  organisation_repo.py  refresh_token_repo.py  report_repo.py  user_repo.py
app/schemas/: audit.py  draft.py  organisation.py  report.py  token.py  user.py
app/services/: draft_service.py  errors.py  organisation_service.py  pdf_service.py  report_service.py  user_service.py
app/storage/: filestore.py
app/templates/: report.html.j2
scripts/: deploy.sh  gunicorn.conf.py  nginx.conf.example
scripts/systemd/: softtarget.service
tests/: conftest.py  factories.py
tests/integration/: test_healthz.py
tests/unit/: test_config.py  test_draft_service.py  test_filestore.py  test_pdf_service.py  test_rate_limit.py  test_schemas.py  test_security.py
