[project]
name = "soft-target-backend"
version = "0.1.0"
description = "Soft Target Backend — FastAPI service for confidential investigation report management"
requires-python = ">=3.12"
readme = "AGENTS.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "weasyprint>=63.0",
    "jinja2>=3.1.4",
    "structlog>=24.4.0",
    "typer>=0.13.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
]

[project.scripts]
softtarget = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4.20240106",
    "types-passlib>=1.7.7.20240819",
    "types-aiofiles>=24.1.0.20240626",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "ASYNC",
]
ignore = [
    "B008",  # function calls in defaults — FastAPI Depends() pattern
    "S101",  # assert — used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"alembic/**/*.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["app"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: integration tests that require a database",
]
addopts = "-ra --strict-markers"
